--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <h1>Adven of code 2019</h1>
     <h3><a href="https://adventofcode.com/">AoC2019 HOME PAGE</a></h3>
 </body>
-<script src="day1/day1.js"></script>
-<!-- <script src="day2.js"></script> -->
+<!-- <script src="day1/day1.js"></script> -->
+<script src="day2/day2.js"></script>
 <!-- <script src="day3.js"></script> -->
 <!-- <script src="day4.js"></script> -->
 <!-- <script src="day5.js"></script> -->
