--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <h3><a href="https://adventofcode.com/">AoC2019 HOME PAGE</a></h3>
 </body>
 <!-- <script src="day1/day1.js"></script> -->
-<script src="day2/day2.js"></script>
-<!-- <script src="day3.js"></script> -->
+<!-- <script src="day2/day2.js"></script> -->
+<script src="day3/day3.js"></script>
 <!-- <script src="day4.js"></script> -->
 <!-- <script src="day5.js"></script> -->
 <!-- <script src="day6.js"></script> -->
