--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </body>
 <!-- <script src="day1/day1.js"></script> -->
 <!-- <script src="day2/day2.js"></script> -->
-<script src="day3/day3.js"></script>
-<!-- <script src="day4.js"></script> -->
+<!-- <script src="day3/day3.js"></script> -->
+<script src="day4/day4.js"></script>
 <!-- <script src="day5.js"></script> -->
 <!-- <script src="day6.js"></script> -->
 <!-- <script src="day7_a.js"></script> -->
