--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <!-- <script src="day1/day1.js"></script> -->
 <!-- <script src="day2/day2.js"></script> -->
 <!-- <script src="day3/day3.js"></script> -->
-<script src="day4/day4.js"></script>
-<!-- <script src="day5.js"></script> -->
-<!-- <script src="day6.js"></script> -->
+<!-- <script src="day4/day4.js"></script> -->
+<!-- <script src="day5/day5.js" type="module"></script> -->
+<script src="day6/day6.js"></script>
 <!-- <script src="day7_a.js"></script> -->
 <!-- <script src="day7_b.js"></script> -->
 <!-- <script src="day7c.js"></script> -->
