--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 <!-- <script src="day3/day3.js"></script> -->
 <!-- <script src="day4/day4.js"></script> -->
 <!-- <script src="day5/day5.js" type="module"></script> -->
-<script src="day6/day6.js"></script>
+<!-- <script src="day6/day6.js"></script> -->
 <!-- <script src="day7_a.js"></script> -->
 <!-- <script src="day7_b.js"></script> -->
 <!-- <script src="day7c.js"></script> -->
-<!-- <script src="day8.js"></script> -->
+<script src="day8/day8.js"></script>
 <!-- <script src="day9.js"></script> -->
 <!-- <script src="day10.js"></script> -->
 <!-- <script src="day11.js"></script> -->
